objects/vlocity_ins__NonHeldLoss__c.object
<CustomObject>
    <description>Represents a loss claimed against a policy not held by the insurance company using Vlocity Insurance. Used to assist in quoting future insurance coverages. Master-detail child object of Non Held Policy (NonHeldPolicy__c).</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loss History</relationshipLabel>
        <relationshipName>LossHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateOfLoss__c</fullName>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NonHeldProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Held Product</label>
        <referenceTo>vlocity_ins__NonHeldProduct__c</referenceTo>
        <relationshipLabel>Loss History</relationshipLabel>
        <relationshipName>LossHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TypeOfLoss__c</fullName>
        <label>Type of Loss</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Disasters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loss</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loss History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>